<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">HelloAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello Android!</string>
	<string name="get_url">GO</string>
    <string name="action_search">Search</string>
    <string name="app_id">306062796201990</string>
    <string name="google_map_apikey">AIzaSyDEBmHHY1mqvI5l5skX7OxYJe3nE5DqRP8</string>
    <string name="btn_getloc">Get Location</string>
    <string name="btn_getaddr">Get Address</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="latlon">현 위치 : </string>
    <string name="address">주 소 : </string>
    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="location_requested">Location updates requested.</string>
    <string name="location_updated">Location updated.</string>
    <string name="location_updates_stopped">Location updates stopped.</string>
    <string name="chrono_format">Initial format:<xliff:g id="initial-format">%</xliff:g></string>
    <string name="start_timer">00:00:00</string>
    <string name="askSetGPS">GPS가 꺼져있습니다. 트랙킹을 위하여 확인 버튼을 누르시면 GPS 사용 설정 페이지로 이동합니다.</string>
    
    <string name="txt_hint_input">type here what you listen</string>
    <string name="txt_test1">I love my cat so much. He has lived with me for 17 years. But now my cat looks very old and weak. He can\'t catch mice. How long does a cat live?</string>
    <string name="title_complete">미션 성공!</string>
    
    <string name="exercise_front">Exercise</string>
    <string name="exercise_back">Last Access : 1 day ago</string>
    <string name="exercise_back_explain">Score : 250</string>
    
    <string name="daily_front">Daily Update</string>
    <string name="daily_back">Last Access : 2 days ago</string>
    <string name="daily_back_explain">Score : 220</string>
    
    <string name="title_section1">Sect 1</string>
    <string name="title_section2">Sect 2</string>
    <string name="title_section3">Sect 3</string>
    
    <string name="alert_msg">가나다라마바사아</string>
    <string name="str_dlg_title">Dialog</string>
</resources>
